--- a/src/views/Recommend/index.less
+++ b/src/views/Recommend/index.less
@@ -3,9 +3,22 @@ html {
     background-color: #e1f2f0;
 }
 
+.r-loading-wrapper {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .r-loading {
+        padding: 50px;
+        // background: rgba(0, 0, 0, 0.05);
+        border-radius: 4px;
+    }
+}
+
 .detail-card-wrapper {
     width: 850px;
-    margin: 30px auto;
+    margin: 30px;
 
     .r-header {
         font-size: 20px;
@@ -66,7 +79,6 @@ html {
         }
 
         .isFocusedBtn {
-            
         }
 
         .isNotFocusedBtn {
@@ -79,7 +91,6 @@ html {
         font-weight: 500;
         margin-top: 30px;
     }
-
 
     .publish-time {
         margin-top: 20px;
