--- a/src/views/Detail/index.less
+++ b/src/views/Detail/index.less
@@ -1,6 +1,7 @@
 html {
     // background: linear-gradient(180deg, #a0dbd4, white);
     background-color: #e1f2f0;
+    overflow: scroll;
 }
 
 .detail-card-wrapper {
@@ -58,7 +59,6 @@ html {
         }
 
         .isFocusedBtn {
-            
         }
 
         .isNotFocusedBtn {
@@ -71,7 +71,6 @@ html {
         font-weight: 500;
         margin-top: 30px;
     }
-
 
     .publish-time {
         margin-top: 20px;
