--- a/src/views/Header/index.less
+++ b/src/views/Header/index.less
@@ -28,13 +28,14 @@ header-menu {
         background-color: #041527;
         width: 42px;
         height: 42px;
+        display: block;
     }
 
     .user-name {
         color: aliceblue;
         cursor: pointer;
         font-size: 16px;
-        margin-right: -30%;
+        margin-left: 20px;
         height: 42px;
         display: flex;
         align-items: center;
