--- a/src/views/Recommend/index.less
+++ b/src/views/Recommend/index.less
@@ -1,6 +1,7 @@
 html {
     // background: linear-gradient(180deg, #a0dbd4, white);
     background-color: #e1f2f0;
+    overflow: scroll;
 }
 
 .r-loading-wrapper {
