--- a/src/views/Header/index.less
+++ b/src/views/Header/index.less
@@ -2,43 +2,49 @@ header-menu {
     // margin-left: 20px;
 }
 
-.publish-btn {
-    margin-left: 1%;
-}
-
-.community-name {
-    color: aliceblue;
-    width: 200;
-}
-
-.change-community-btn {
-    margin-left: 1%;
-    color: #87d068;
-}
-
-.user-wrapper {
-    height: 100%;
+.header-right-wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    cursor: pointer;
 
-    .tab-user-avatar {
-        // style={{ backgroundColor: '#87d068' }}
-        background-color: #041527;
-        width: 42px;
-        height: 42px;
-        display: block;
+    .publish-btn {
+        margin-left: 1%;
     }
 
-    .user-name {
+    .community-name {
         color: aliceblue;
-        cursor: pointer;
-        font-size: 16px;
-        margin-left: 20px;
-        height: 42px;
+        width: 200;
+    }
+
+    .change-community-btn {
+        margin-left: 1%;
+        color: #87d068;
+    }
+
+    .user-wrapper {
+        height: 100%;
         display: flex;
+        justify-content: space-between;
         align-items: center;
+        cursor: pointer;
+
+        .tab-user-avatar {
+            // style={{ backgroundColor: '#87d068' }}
+            background-color: #041527;
+            width: 42px;
+            height: 42px;
+            display: block;
+        }
+
+        .user-name {
+            color: aliceblue;
+            cursor: pointer;
+            font-size: 16px;
+            margin-left: 20px;
+            height: 42px;
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
