--- a/src/views/FeedbackModal/index.less
+++ b/src/views/FeedbackModal/index.less
@@ -6,5 +6,5 @@
 .feedback-footer-wrapper {
     margin-top: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
