--- a/src/views/MobileList/style.less
+++ b/src/views/MobileList/style.less
@@ -1,6 +1,7 @@
 .mobile-list-body {
     width: 100%;
-    background-color: aqua;
+    touch-action: none;
+    pointer-events: auto;
 }
 
 .loading {
