--- a/src/views/MobileList/components/ListItem/index.less
+++ b/src/views/MobileList/components/ListItem/index.less
@@ -1,13 +1,14 @@
 
 .mobile-card-wrapper {
-    width: 100vw;
+    width: 100%;
 
     .mobile-collect-btn-false {
         font-size: 18px;
     }
 
     .mobile-info-wrapper {
-        width: 90vw;
+        // width: 90vw;
+        width: 100%;
         display: flex;
         justify-content: space-between;
 
@@ -41,8 +42,9 @@
     }
 
     .mobile-card-content {
-        width: 90vw;
-        margin-top: 20px;
+        // width: 90vw;
+        width: 90%;
+        margin-top: 3vw;
         text-align: justify;
         font-size: 14px;
     }
@@ -50,7 +52,8 @@
     .mobile-card-footer {
         display: flex;
         justify-content: end;
-        margin-right: 10vw;
+        margin-top: 3vw;
+        margin-right: 5vw;
 
         .mobile-footer-answer-nums {
             color: #8d8d8d;
@@ -70,4 +73,8 @@
 
 .adm-card-header:not(:last-child) {
     border-bottom: solid 0px var(--adm-color-border);
+}
+
+.adm-card-header-title {
+    padding-right: 3vw;
 }
